fix: adjust spacing breakpoint in .container

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,7 +43,7 @@
 
 @layer components {
   .container {
-    @apply mx-auto my-lg w-full max-w-[1440px] px-md md:my-xl md:px-lg md:py-xl;
+    @apply mx-auto my-xl w-full max-w-[1440px] px-md py-lg md:my-xl md:px-lg md:py-xl;
   }
   .max-height {
     @apply min-h-[calc(100dvh-64px)];
